# estate_cms

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
estate_cms/: README.md  manage.py  requirements.in  requirements.txt
estate_cms/cms_estateobjects_integration/: apps.py  cms_apps.py  cms_toolbars.py
estate_cms/cms_estateobjects_integration/templates/cms_estateobjects_integration/: estateobjects_plugin.html
estate_cms/estate_cms/: asgi.py  common.py  settings.py  urls.py  wsgi.py
estate_cms/estate_cms/templates/: base.html
estate_cms/estateobjects/: admin.py  apps.py  cms_plugins.py  forms.py  models.py  urls.py  views.py
estate_cms/estateobjects/migrations/: 0001_squashed_0004_alter_estateobject_asking_price_and_more.py  0001_squashed_0005_remove_store_position.py  0005_remove_store_position.py  0006_image.py  0007_contact_remove_bid_bidder_and_more.py  0008_bid_bidder_estateobject_owner_and_more.py  0009_alter_estateobject_options_alter_image_options_and_more.py  0010_alter_store_collection_id.py  0011_estateobject_description.py  0012_alter_estateobject_object_material_and_more.py
estate_cms/estateobjects/templates/estateobjects/: estateobject_detail.html
estate_cms/locale/en/LC_MESSAGES/: django.po
estate_cms/locale/fr/LC_MESSAGES/: django.mo  django.po
